Added basic statistic section styles

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -3,6 +3,7 @@
     --theme-color: #427ec6;
     --light-color: #fff;
     --cold-color: #ecf2f9;
+    --secondary-color: #9a9da2;
     --dark-color: #343536;
 
     --base-font-family: 'Rubik', sans-serif;
