Added basic roadmap styles

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,5 +1,6 @@
 :root {
     --accent-color: #d80525;
+    --accent-color-rgb: 216, 5, 37;
     --theme-color: #427ec6;
     --light-color: #fff;
     --cold-color: #ecf2f9;
