Added some styles for team section

--- a/src/scss/components/icon.scss
+++ b/src/scss/components/icon.scss
@@ -22,4 +22,16 @@
     &-feat-6 {
         content: url('/assets/icons/feat-6.svg');
     }
+
+    &-linked-in {
+        content: url('/assets/icons/linked-in.svg');
+    }
+
+    &-arrow-left {
+        content: url('/assets/icons/arrow-left.svg');
+    }
+
+    &-arrow-right {
+        content: url('/assets/icons/arrow-right.svg');
+    }
 }
