--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,6 +4,8 @@
 @import 'grid';
 @import 'common';
 
-@import 'sections/index.scss';
+@import 'sections/index';
+
+@import 'swiper/css/bundle';
 
 @import 'responsible';
