Added footer section styles

--- a/src/scss/components/icon.scss
+++ b/src/scss/components/icon.scss
@@ -27,6 +27,22 @@
         content: url('/assets/icons/linked-in.svg');
     }
 
+    &-twitter {
+        content: url('/assets/icons/twitter.svg');
+    }
+
+    &-telegram {
+        content: url('/assets/icons/telegram.svg');
+    }
+
+    &-facebook {
+        content: url('/assets/icons/facebook.svg');
+    }
+
+    &-youtube {
+        content: url('/assets/icons/youtube.svg');
+    }
+
     &-arrow-left {
         content: url('/assets/icons/arrow-left.svg');
     }
