--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -3,9 +3,11 @@
     --accent-color-rgb: 216, 5, 37;
     --theme-color: #427ec6;
     --light-color: #fff;
+    --light-color-rgb: 255, 255, 255;
     --cold-color: #ecf2f9;
     --secondary-color: #9a9da2;
     --dark-color: #343536;
+    --footer-color: #265389;
 
     --base-font-family: 'Rubik', sans-serif;
     --navigation-font: 500 15px var(--base-font-family);
