--- a/src/scss/components/sales-charts.scss
+++ b/src/scss/components/sales-charts.scss
@@ -47,8 +47,10 @@
                 margin-bottom: 12px;
             }
         }
+    }
 
-        &:nth-of-type(1) {
+    &--first {
+        .sales-chart__legend {
             li {
                 &:nth-of-type(1) {
                     &::before {
@@ -63,8 +65,10 @@
                 }
             }
         }
+    }
 
-        &:nth-of-type(2) {
+    &--second {
+        .sales-chart__legend {
             li {
                 &:nth-of-type(1) {
                     &::before {
