--- a/src/scss/sections/team.scss
+++ b/src/scss/sections/team.scss
@@ -1,6 +1,28 @@
-@import '../components/team-members';
+@import '../components/team-member';
 
-.team {
+.teams {
+    .team-members {
+        &__list {
+            justify-content: center;
+            gap: 40px;
+        }
+
+        &__next,
+        &__previous {
+            z-index: 2;
+            position: absolute;
+            top: calc(100px - 14px);
+        }
+
+        &__previous {
+            left: 20px;
+        }
+
+        &__next {
+            right: 20px;
+        }
+    }
+
     &__section {
         text-align: center;
         padding-left: 80px;
