Added some vars

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -7,6 +7,8 @@
     --cold-color: #ecf2f9;
     --secondary-color: #9a9da2;
     --dark-color: #343536;
+    --darker-color: #000;
+    --navigation-color: #3170c4;
     --footer-color: #265389;
 
     --base-font-family: 'Rubik', sans-serif;
