--- a/src/scss/sections/index.scss
+++ b/src/scss/sections/index.scss
@@ -5,6 +5,6 @@
 @import 'early-investor';
 @import 'statistic';
 @import 'product-map';
-@import 'team';
+@import 'teams';
 @import 'early-adopter';
 @import 'footer';
