--- a/src/scss/components/navigation.scss
+++ b/src/scss/components/navigation.scss
@@ -1,18 +1,23 @@
 .navigation {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    &__container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 
     &__logo {
-        border-radius: 50%;
-        background-color: var(--light-color);
         width: 40px;
         height: 40px;
+        object-position: left;
         object-fit: cover;
     }
 
     &__list {
+        margin-top: 0;
+        margin-bottom: 0;
+        padding-left: 0;
         display: flex;
+        align-items: center;
         list-style-type: none;
         gap: 30px;
     }
@@ -46,6 +51,52 @@
 
         &:hover {
             text-decoration: underline;
+        }
+    }
+
+    &__toggle {
+        width: 34px;
+        height: 34px;
+        display: none;
+        background: none;
+        border: none;
+        background-image: url('/assets/icons/menu.svg');
+    }
+
+    &--burger {
+        padding: 20px;
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        background-color: var(--navigation-color);
+
+        .navigation {
+            &__container {
+                height: 100%;
+                justify-content: center;
+                flex-direction: column;
+            }
+
+            &__list {
+                width: 100%;
+                grid-column: 1 / 3;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 40px;
+                margin-bottom: 40px;
+            }
+
+            &__toggle {
+                background-image: url('/assets/icons/close.svg');
+            }
+
+            &__button {
+                display: block;
+                margin-bottom: auto;
+            }
         }
     }
 }
