--- a/src/scss/sections/about.scss
+++ b/src/scss/sections/about.scss
@@ -23,7 +23,7 @@
     .platform-features {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        grid-auto-columns: 1fr;
+        grid-auto-rows: 1fr;
         gap: 20px;
     }
 }
