--- a/src/scss/grid.scss
+++ b/src/scss/grid.scss
@@ -7,25 +7,25 @@
 }
 
 @media screen and (max-width: $breakpoint-sm) {
-    .container {
+    :root {
         --container-width: 320px;
     }
 }
 
 @media screen and (min-width: $breakpoint-sm) {
-    .container {
+    :root {
         --container-width: 560px;
     }
 }
 
 @media screen and (min-width: $breakpoint-md) {
-    .container {
+    :root {
         --container-width: 740px;
     }
 }
 
 @media screen and (min-width: $breakpoint-lg) {
-    .container {
+    :root {
         --container-width: 1080px;
     }
 }
