--- a/src/scss/sections/about.scss
+++ b/src/scss/sections/about.scss
@@ -16,6 +16,8 @@
 
     &__text {
         p {
+            margin-top: 0;
+            margin-bottom: 0;
             font: var(--base-font);
         }
     }
