--- a/src/scss/components/sales-chart.scss
+++ b/src/scss/components/sales-chart.scss
@@ -30,7 +30,7 @@
                 margin-top: -2px;
                 width: 12px;
                 height: 12px;
-                background-color: #000;
+                background-color: var(--darker-color);
                 border-radius: 50%;
                 margin-right: 10px;
                 content: '';
