--- a/src/scss/sections/teams.scss
+++ b/src/scss/sections/teams.scss
@@ -11,7 +11,7 @@
         &__previous {
             z-index: 2;
             position: absolute;
-            top: calc(100px - 14px);
+            top: 86px;
         }
 
         &__previous {
