Fixed styles validity

--- a/src/scss/components/navigation.scss
+++ b/src/scss/components/navigation.scss
@@ -58,7 +58,7 @@
         width: 34px;
         height: 34px;
         display: none;
-        background: none;
+        background-color: unset;
         border: none;
         background-image: url('/assets/icons/menu.svg');
     }
