--- a/src/scss/responsible.scss
+++ b/src/scss/responsible.scss
@@ -14,7 +14,7 @@
 
         &__logo {
             width: 150px;
-            background-color: none;
+            background-color: unset;
         }
 
         &__button,
